<resources>
    <string name="app_name">12306Android</string>

    <string name="login">登录</string>
    <string name="no_login">暂不登录</string>

    <string name="query_start">开始抢票</string>

    <string name="ok">确定</string>
    <string name="cancel">取消</string>

    <string name="input_username">请输入用户名</string>
    <string name="input_password">请输入密码</string>

    <string name="from_station_text">始发站：</string>
    <string name="to_station_text">终点站：</string>
    <string name="order_date">订票日期: </string>
    <string name="query">查询</string>

    <string name="info">信息展示</string>
    <string name="query_fail_info">查询为空，可能IP被封，请重试！</string>

    <string name="dutaion">"%sh"</string>
    <string name="bussiness_seat">"商务座：%s"</string>
    <string name="super_seat">"特等座：%s"</string>
    <string name="first_seat">一等座：%s</string>
    <string name="second_seat">二等座：%s</string>
    <string name="soft_seat">软卧：%s</string>
    <string name="hard_seat">硬卧：%s</string>
    <string name="hard_seat2">硬座：%s</string>
    <string name="no_seat">无座：%s</string>
</resources>
