<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:includeFontPadding="false"
        android:textSize="16sp"/>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/user"
        android:layout_marginTop="5dp"
        android:background="#000000"/>

    <TextView
        android:id="@+id/from_station_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from_station_text"
        android:layout_below="@id/line"
        android:layout_marginTop="5dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/from_station_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/from_station_text"
        android:layout_toRightOf="@id/from_station_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/to_station_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_station_text"
        android:layout_below="@id/from_station_text"
        android:layout_marginTop="5dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/to_station_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/to_station_text"
        android:layout_toRightOf="@id/to_station_text"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/order_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_date"
        android:layout_below="@id/to_station_text"
        android:layout_marginTop="5dp"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/order_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/order_date"
        android:layout_toRightOf="@id/order_date"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/order_date"
        android:layout_marginTop="5dp"
        android:text="@string/query"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/quert_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/query"
        android:layout_alignParentRight="true"
        android:text="@string/query_start"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/process_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/query"
        android:layout_marginTop="10dp"
        android:textSize="16sp"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/ticket_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/process_info"
        android:layout_marginTop="10dp">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>